--- a/style.css
+++ b/style.css
@@ -12,3 +12,17 @@
 .btn:focus {
     outline: none !important;
 }
+
+.username {
+    font-weight: bold;
+}
+
+.time {
+    font-size: 0.7em;
+    color: #cecece
+}
+
+.update-mssg {
+    text-align: center;
+    margin: 20px auto;
+}
